--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div class="item1">
                 <p class="title">GRD 121: Drawing Fundamentals 1</p>
                 <p class="disc"> drawing of crushed soda can.</p>
-                <img class="images2" src="Images/Brigante_Value400.jpg"
+                <img class="images2" src="images/Brigante_Value400.jpg"
                     alt="hand drawing of crushed cheerwine soda can laying on its side.">
             </div>
             <div class="item2">
@@ -48,24 +48,24 @@
             <div class="item3">
                 <p class="title">GRD 265: Digital Print Production</p>
                 <p class="disc"> Postcard for North Carolina Museum of Art.</p>
-                <img class="images2" src="Images/Brigante-postcard3400.jpg"
+                <img class="images2" src="images/Brigante-postcard3400.jpg"
                     alt="Postcard design with flowers of yellow and pink.">
             </div>
             <div class="item4">
                 <p class="title">GRD 263: Illustrative Imaging</p>
                 <p class="disc"> Self promotion.</p>
-                <img class="images2" src="Images/Brigante-Selfpromo400.jpg"
+                <img class="images2" src="images/Brigante-Selfpromo400.jpg"
                     alt="Self promotion postcard photo for designer; objects are drawing book, colored pencils, photography book, camera lens, pen set, computer, color chart, and other drawing utensils.">
             </div>
             <div class="item5">
                 <p class="title">GRD 230: Technical Illustration</p>
                 <p class="disc">Mock up of parts sheet for furniture piece.</p>
-                <img class="images2" src="Images/brigante-TImockup.jpg" alt="parts sheet for a hutch furiture piece.">
+                <img class="images2" src="images/brigante-TImockup.jpg" alt="parts sheet for a hutch furiture piece.">
             </div>
             <div class="item6">
                 <p class="title">GRD 152: Computer Design Tech 1</p>
                 <p class="disc"> Map design for small town.</p>
-                <img class="images2" src="Images/Brigante-Final2.jpg"
+                <img class="images2" src="images/Brigante-Final2.jpg"
                     alt="Map design digitally made for the small town of New Bern, NC.">
             </div>
         </div>
